--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+ul {
+  
+  list-style: none;
+  display: flex;
+  a{
+    text-decoration: none;
+    color: black;
+    margin: 0 10px;
+  };
+}
