--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,8 @@
 @import "font-awesome";
 @import "./header.scss";
+@import "./footer.scss";
 @import "./index.scss";
 @import "./about.scss";
+@import "./skill.scss";
+@import "./contact.scss";
+@import "./btnMenu.scss";
