--- a/app/assets/stylesheets/_about.scss
+++ b/app/assets/stylesheets/_about.scss
@@ -1,11 +1,29 @@
 .container{
   // background-color: #cecece61;
-  background-color: rgba(230, 228, 228, 0.45);
   // opacity: 0.1;
+  // background-color: rgba(230, 228, 228, 0.45);
+  // background-image: radial-gradient( circle farthest-corner at 12.3% 19.3%,  rgba(85,88,218,1) 0%, rgba(95,209,249,1) 100.2% );
+  background-image: radial-gradient( circle farthest-corner at 1.3% 2.8%,  rgba(239,249,249,1) 0%, rgba(182,199,226,1) 100.2% ); 
 }
-.main{
+.about{
+  background-color: #ecf0f1;
   margin:0 auto;
-  background-color: white;
   width: calc(100% / 1.5);
-  height: 92vh;
+  padding: 50px 20px 64px;
+  color: #333;
+  text-align:center;
+  .heading{
+    display: inline-block;
+    margin: 30px 0 15px;
+    padding-bottom: 15px;
+    letter-spacing: 2px;
+    font-size: 3rem;
+    border-bottom: double 4px #999;
+  }
+  &-text {
+    width: 600px;
+    margin: 30px auto;
+    line-height: 2.5;
+    text-align: left;
+  }
 }
