--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -5,25 +5,39 @@
   margin: 0;
   padding: 0;
 }
+
+span{
+  display: none;
+}
+
+.fas.fa-bars{
+  margin: 0 10px 0 -20px;
+}
+
 .content{
   margin:0;
   padding: 0;
   background-color: #1455a791;
+  box-shadow: 0px 3px 5px #2c3e50;
   height: 55px;
+  position:fixed;
+  width: 100%;
   display: flex;
   flex-direction: row;
+  z-index: 1;
   // display: inline-block;
 }
 
 .content_legth{
   width: 50%;
   font-size: 32px;
-  span {
-    display: block;
-    margin: 10px auto;
-    padding-left: 75px;
+  // display: block;
+  margin: 10px auto;
+  padding-left: 75px;
+
+  display: flex;
     // text-align:center
-  }
+  
 } 
 
 .contant_rigth{
@@ -57,5 +71,20 @@
       };
     }
   }
-
+}
+@media (min-width: 600px) {
+  span {
+    display: block;
+  }
+  .fas.fa-bars{
+    display: none;
+  }
+}
+@media (min-width: 1050px) {
+  .fas.fa-bars{
+    display: none;
+  }
+  span {
+    display: block;
+  }
 }
