--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,1 +1,47 @@
-.body
+%section#home.home
+  .head
+    %h1 I am Ricardo
+    %p I like to design and code
+    =link_to "Read More...", "#container"
+%section#container.container
+  .about
+    %h2.heading PROFILE
+    %p.about-text
+      子どもの頃からモノづくりが好きで、いまはウェブアプリをつくることにハマっています。
+      今までの仕事と比べるのは難しいですが、書いたコードをすぐに結果が反映されるので
+      進んでいく感じがパズルを解いていくような感じがして楽しいですね。
+      逆に進まないときはとてもつらいですが。笑
+    %h2.heading SERVICE
+    %p.about-text
+      WEB制作において、最初のご相談から納品まで致します,
+      ご利用の流れの第一歩は無料相談からはじまります,
+      新規ホームページ制作、リニューアルをご検討の方も、まずは一度ご相談ください。
+%section#works.works
+  %h2.heading MY WORKS
+  .works-wrapper
+    .work-box
+      %img.work-image{:alt => "制作事例", :src => "images/pictweet.jpg"}/
+      .work-description
+        Pictweet
+        %br/
+        %a.button.button-ghost{:href => "#"} READ MORE
+    .work-box
+      %img.work-image{:alt => "制作事例", :src => "images/mooovi.jpg"}/
+      .work-description
+        Mooovi
+        %br/
+        %a.button.button-ghost{:href => "#"} READ MORE
+    .work-box
+      %img.work-image{:alt => "制作事例", :src => "images/profy.jpg"}/
+      .work-description
+        Profy
+        %br/
+        %a.button.button-ghost{:href => "#"} READ MORE
+%section#contact.contact
+  %form.contact-form
+    %input{:name => "name", :placeholder => "NAME", :type => "text"}/
+    %input{:name => "email", :placeholder => "EMAIL", :type => "text"}/
+    %input{:name => "title", :placeholder => "TITLE", :type => "text"}/
+    %textarea{:name => "message", :placeholder => "MESSAGE"}
+    %input{:type => "submit", :value => "SEND"}/
+
