--- a/app/assets/stylesheets/_about.scss
+++ b/app/assets/stylesheets/_about.scss
@@ -3,10 +3,13 @@
   // opacity: 0.1;
   // background-color: rgba(230, 228, 228, 0.45);
   // background-image: radial-gradient( circle farthest-corner at 12.3% 19.3%,  rgba(85,88,218,1) 0%, rgba(95,209,249,1) 100.2% );
-  background-image: radial-gradient( circle farthest-corner at 1.3% 2.8%,  rgba(239,249,249,1) 0%, rgba(182,199,226,1) 100.2% ); 
+  // background-image: radial-gradient( circle farthest-corner at 1.3% 2.8%,  rgba(239,249,249,1) 0%, rgba(182,199,226,1) 100.2% ); 
+  background-color: rgb(55, 93, 65);
+  
 }
 .about{
-  background-color: #ecf0f1;
+  // background-color: #ecf0f1;
+  background-color: #e4dec7;
   margin:0 auto;
   width: calc(100% / 1.5);
   padding: 50px 20px 64px;
