--- a/app/assets/stylesheets/_footer.scss
+++ b/app/assets/stylesheets/_footer.scss
@@ -1,96 +1,43 @@
-@mixin clearfix {
-	&::after {
-		content: "";
-		display: block;
-		clear: both;
-	}
+.footer{
+  background-color: #383634;
 }
-
-footer.footer-section {
-  padding: 0 20px 10px 20px;
-  background: #212121;
-  bottom: 0;
-
-  .footer-top {
-    display: flex;
-    justify-content:center;
-    margin: 0 auto;
-    &__left,
-    &__center,
-    &__right,
-    &__nav-lang {
-      padding-right: 20px;
-    }
-    &__right-box {
-      display: inline-flex;
-      &--cell {
-        padding-right: 15px;
-        width: 50%;
-      }
-    }
-    li {
-      margin: 16px 0 0;
-      display: block;
-      opacity: .7;
-      color: #fff;
-      font-size: 12px;
-      line-height: 1.5em;
-      text-decoration: none;
-    } 
-  }
-
-  h2.footer-head {
+.social_buttons{
+  height: 150px;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  a{
+    display: inline-flex;
+    font-style: 18px;
+    width: 60px;
+    height: 60px;
     color: #fff;
-    padding: 16px 16px 16px 0px;
-    text-align: left;
-    height: 22px;
-    margin-top: 10px;
-    font-size: 16px;
-    font-weight: 100;
-    line-height: 1.4em;
-  }
-
-  .footer-bottom {
-    margin: 30px auto 20px;
-    width: 1020px;
-    display: flex;
-    &__copyright {
-      width: 70%;
-      display: inline-block;
-      margin: 8px 0 0;
-      text-align: center;
-      vertical-align: sub;
-      font-size: 12px;
-      color: #fff;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    margin: 0 8px;
+    &:before{
+      content: "";
+      position: absolute;
+      width: 60px;
+      height: 60px;
+      background: linear-gradient(45deg,#22a6b3,#30336b);
+      border-radius: 50%;
+      z-index: 1;
+      transition: 0.3s ease-in;
     }
-  }
-
-  li.footer-social-link {
-    display: inline-block;
-    margin: 14px 14px 0 0;
-    color: #fff;
+    &:hover::before{
+      transform: scale(0);
+    }
+    i{
+      transition: 0.3 ease-in;
+      z-index: 2;
+    }
+    &:hover i{
+      background: linear-gradient(45deg,#22a6b3,#30336b);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      transform: scale(2.2);
+    }
   }
 }
-  .red_btn {
-    bottom: 32px;
-    right: 32px;
-    width: 160px;
-    height: 160px;
-    font-size: 22px;
-    position: fixed;
-    border-radius: 50%;
-    background: #ea352d;
-    color: #fff;
-    text-align: center;
-    text-decoration: none;
-    p {
-      margin-top: 26px;
-    }
-    i {
-      margin-top: 6px;
-      font-size: 58px;
-    }
-  }
-  .footer-bottom__copyright {
-    font-size: 14px;
-  }
