--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -4,6 +4,8 @@
 *{
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
 }
 
 span{
@@ -78,7 +80,8 @@ span{
   z-index: -2; 
   color: whitesmoke;
   // background-image: linear-gradient(to top, #0c3483 0%, #a2b6df 100%, #6b8cce 100%, #a2b6df 100%);
-  background-color: #1455a791;
+  background-color: #78a2ef;
+  border-radius: 4px;
   opacity: 0.9;
   transform: scale(1.2);
   transition: ease 0.5s;
