--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,51 +1,10 @@
-%footer.footer-section
-  .footer-top
-    .footer-top__left
-      %h2.footer-head メルカリについて
-      %ul
-        %li 会社概要（運営会社）
-        %li 採用情報
-        %li プレスリリース
-        %li 公式ブログ
-        %li メルカリロゴ利用ガイドライン
-        %li.footer-social-link
-          %i.fa.fa-twitter.fa-3x
-        %li.footer-social-link
-          %i.fa.fa-facebook-square.fa-3x
-    .footer-top__center
-      %h2.footer-head ヘルプ＆ガイド
-      %ul
-        %li メルカリガイド
-        %li らくらくメルカリ便
-        %li ゆうゆうメルカリ便
-        %li 大型メルカリ便
-        %li 車体取引ガイド
-        %li メルカリあんしん・あんぜん宣言！
-        %li 偽ブランド品撲滅への取り組み
-        %li メルカリボックス
-    .footer-top__right
-      %h2.footer-head プライバシーと利用規約
-      .footer-top__right-box
-        .footer-top__right-box--cell
-          %ul
-            %li プライバシーポリシー
-            %li メルカリ利用規約
-            %li あんしんスマホサポート制度に関する利用特約
-            %li コンプライアンスポリシー
-        .footer-top__right-box--cell
-          %ul
-            %li 個人データの安全管理に係る基本方針
-            %li 特定商取引に関する表記
-            %li 資金決済法に基づく表示
-            %li 法令順守と犯罪抑止のために  
-    .footer-top__nav-lang
-      %h2.footer-head 国
-      %ul
-        %li 日本
-        %li United States
-  .footer-bottom
-    .footer-bottom__logo
-    = image_tag "//www-mercari-jp.akamaized.net/assets/img/common/common/logo-white.svg?2098311808"
-    .footer-bottom__copyright
-      %small © 2019 Mercari
-
+.footer
+  .social_buttons
+    =link_to "https://twitter.com/Utino_Ricardo" do
+      %i.fab.fa-twitter
+    =link_to "https://ricardo-utino.hatenablog.com/" do
+      %i.fas.fa-blog
+    =link_to "https://github.com/rickutino" do
+      %i.fab.fa-github
+    =link_to "https://www.linkedin.com/in/ricardo-utino-145012191/" do
+      %i.fab.fa-linkedin-in
