--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,5 @@
 @import "font-awesome";
+@import url('https://fonts.googleapis.com/css?family=Indie+Flower|Noto+Serif+JP|Sawarabi+Gothic&display=swap');
 @import "./header.scss";
 @import "./footer.scss";
 @import "./index.scss";
@@ -6,4 +7,5 @@
 @import "./skill.scss";
 @import "./contact.scss";
 @import "./btnMenu.scss";
+@import "./works.scss";
 @import "./new.scss";
