--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -10,7 +10,7 @@
       %li.menu
         =link_to "ABOUT", "#container",{"data-page" => "container"}
       %li.menu
-        =link_to "SKILL","#works",{"data-page" => "works"}
+        =link_to "SERVICE","#works",{"data-page" => "works"}
       %li.menu
         =link_to "CONTACT" ,"#contact",{"data-page" => "contact"}
       .bubble
