--- a/app/assets/stylesheets/_about.scss
+++ b/app/assets/stylesheets/_about.scss
@@ -24,9 +24,11 @@
     border-bottom: double 4px #999;
   }
   &-text {
+    height: 100vh;
     width: 600px;
     margin: 30px auto;
     line-height: 2.5;
     text-align: left;
+    word-wrap: break-word;
   }
 }
