--- a/app/assets/stylesheets/_contact.scss
+++ b/app/assets/stylesheets/_contact.scss
@@ -1,45 +1,102 @@
 section.contact {
-  // height: 100vh;
-  // background-color: rgba(25, 25, 120, 0.9);
+  // background: #313840;
+  background: linear-gradient(#1c2948ba, #313840);
   padding: 80px 0 150px;
-  background-image: url(meeting.jpg);
-  background-size:  cover; 
-  opacity: 0.8;
+  // background-image: url(meeting.jpg);
+  // background-size:  cover; 
+  // opacity: 0.8;
 }
 
+.stables {
+  display: block;
+  height: 6rem;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  letter-spacing: 2px;
+  line-height: 1.7;
+  margin: 0 auto;
+  color: #888;
+  vertical-align: baseline;
+  // word-wrap: break-word;
+  h1{
+    // flex-wrap: wrap;
+    font-size:30px;
+    margin-bottom: 10px;
+    font-family: 'Sawarabi Gothic', sans-serif;
+    // word-break : break-all;
+  }
+  p{
+    font-family: 'Sawarabi Gothic', sans-serif;
+  }
+}
 
 .contact-form {
-  width: 50%;
+  width: 550px;
   margin: 50px auto 0;
-  }
   
-  .contact-form input[type=text], .contact-form textarea {
-  display: block;
-  width: 100%;
-  margin-bottom: 10px;
-  padding: 15px;
+}
+.name, .email, .title, .message{
+  background: none;
+  border:none;
   outline: none;
-  border: 1px solid rgba(255, 255, 255, 0.8);
+  border-bottom: 1px solid;
+  color: #888;
+  padding: 10px 6px;
+  font-size: 14px;
+  margin-bottom: 40px;
+}
+
+.name{
+  float: left;
+  width: 270px;
+}
+
+.email{
+  float: right;
+  width: 270px;
+}
+.title{
+  min-width: 100%;
+  max-width: 100%;
+}
+.message{
+  min-width: 100%;
+  max-width: 100%;
+}
+
+@media screen and (max-width:600px){
+  .name,.email{
+    width: 100%;
+  }
+}
+  .contact input[type=text], .contact textarea {
+  display: block;
+  // width: 100%;
+  margin-bottom: 10px;
+  // padding: 15px;
+  // outline: none;
+  // border: 1px solid rgba(255, 255, 255, 0.8);
   border-radius: 0;
-  color: #333;
+  color: #888;
   }
   
-  .contact-form textarea {
+  .contact textarea {
   height: 150px;
   }
   
-  .contact-form input[type=submit] {
+  .btn {
   display: block;
   width: 200px;
   margin: 40px auto 0;
   padding: 15px;
-  border: 1px solid rgba(255, 255, 255, 0.8);
+  // border: 1px solid rgba(255, 255, 255, 0.8);
   border-radius: 5px;
   background-color: transparent;
   color: #fff;
   cursor: pointer;
   }
   
-  .contact-form input[type=submit]:hover {
+  .btn:hover {
   background-color: rgba(255, 255, 255, 0.05);
   }
