--- a/app/views/inquiry_mailer/send_mail.html.erb
+++ b/app/views/inquiry_mailer/send_mail.html.erb
@@ -4,11 +4,11 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <%= @inquiry.name %> 様 から問い合わせがありました。
-      email:<%= @inquiry.emails %>
-      ・お問い合わせ内容
-      <%= @inquiry.title %>
-      -----------------------------------------------
-      <%= @inquiry.message %>
+    <%= @inquiry.name %> 様 から問い合わせがありました。<br>
+      email:<%= @inquiry.emails %><br>
+      ・お問い合わせ内容<br>
+      <%= @inquiry.title %><br><br>
+      -----------------------------------------------<br><br>
+      <%= @inquiry.message %><br>
   </body>
 </html>
