--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -41,7 +41,7 @@
       .face.face1
         .contents
           =image_tag "mercari.png",height: "150", alt: "EC　サイト"
-          %h3 メルカリ（クローンサイト）
+          %h3 メルカリ(クローンサイト)
       .face.face2
         .contents
           %p  スクールのアジャイル開発でメルカリのクローンサイトをチームで開発しました。 ユーザーログイン ・出品、購入 を行うことができます。
