--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -26,7 +26,7 @@ span{
   width: 100%;
   display: flex;
   flex-direction: row;
-  z-index: 1;
+  z-index: 2;
   // display: inline-block;
 }
 
@@ -80,7 +80,7 @@ span{
   z-index: -2; 
   color: whitesmoke;
   // background-image: linear-gradient(to top, #0c3483 0%, #a2b6df 100%, #6b8cce 100%, #a2b6df 100%);
-  background-color: #78a2ef;
+  background-color: #3282b8;
   border-radius: 4px;
   opacity: 0.9;
   transform: scale(1.2);
