--- a/app/assets/stylesheets/_index.scss
+++ b/app/assets/stylesheets/_index.scss
@@ -13,7 +13,7 @@ section.home{
   font-size: 2rem;
   line-height: 1.2;
   .head{
-    color: #618ec5;
+    color: #3282b8;
     -webkit-text-stroke: .5px #313135;
     // mask-image: url(mask.png);
     // -webkit-mask-image: url(mask.png);
@@ -24,7 +24,7 @@ section.home{
       font-size: .761904em;
       font-style: italic;
       font-weight: 500;
-      color: #6a92c3;
+      color: #3282b8;
       display: inline-block;
       -ms-transition: all 0s ease;
       -webkit-transition: all 0s ease;
