--- a/app/assets/stylesheets/_works.scss
+++ b/app/assets/stylesheets/_works.scss
@@ -1,6 +1,6 @@
 .works{
   height: 100vh;
-  background: #333;
+  background: #1b262c;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -20,7 +20,7 @@
       transition: 0.5s;
       &.face1{
         position: relative;
-        background: #333;
+        background: #3282b8;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -43,7 +43,7 @@
         align-items: center;
         padding: 20px 20px 0 20px ;
         box-sizing: border-box;
-        box-shadow: 0 20px 50px rgba(0,0,0,0.8);
+        box-shadow: 0 20px 50px #1b262c;
         transform: translateY(-50px);
         .contents{
           p{
@@ -55,9 +55,9 @@
             display: inline-block;
             text-decoration: none;
             font-weight: 900;
-            color: #333;
+            color: #1b262c;
             padding: 5px;
-            border: 1px solid #333;
+            border: 1px solid #1b262c;
           }
           a:hover{
             color: #fff;
@@ -68,7 +68,7 @@
     }
   }
   .card:hover .face.face1 {
-    background: rgba(74, 105, 189,1.0);
+    background: #0f4c75;
     transform: translateY(-5px);
     .contents{
       opacity: 1;
