--- a/app/assets/stylesheets/_about.scss
+++ b/app/assets/stylesheets/_about.scss
@@ -25,10 +25,10 @@
   }
   &-text {
     height: 100vh;
-    width: 600px;
+    width: 80%;
     margin: 30px auto;
     line-height: 2.5;
-    text-align: left;
+    text-align: justify;
     word-wrap: break-word;
   }
 }
