--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -5,7 +5,7 @@
     =link_to "Read More...", "#container"
 %section#container.container{"data-index" => "1"}
   .about
-    %h2.heading PROFILE
+    %h1.heading PROFILE
     %p.about-text
       子どもの頃からモノづくりが好きで、いまはウェブアプリをつくることにハマっています。
       今までの仕事と比べるのは難しいですが、書いたコードをすぐに結果が反映されるので
@@ -17,7 +17,7 @@
     -#   ご利用の流れの第一歩は無料相談からはじまります,
     -#   新規ホームページ制作、リニューアルをご検討の方も、まずは一度ご相談ください。
 %section#works.works{"data-index" => "2"}
-  -# %h1.heading MY WORKS
+  %h1.heading WORKS
   .container2
     .card
       .face.face1
