--- a/app/assets/stylesheets/_index.scss
+++ b/app/assets/stylesheets/_index.scss
@@ -1,10 +1,11 @@
+
+
 section{
   height: 100vh;
 }
 section.home{
   display: flex;
   background: image-url('img.jpg') fixed;
-  // background: url('images/bg.jpg') fixed;
   background-size:  cover; 
   text-align:center;
   align-items: center;
@@ -19,6 +20,15 @@ section.home{
     // -webkit-mask-image: url(mask.png);
     // mask-size: 120px; 
     // -webkit-mask-size: 120px; /* 横幅50px、高さはauto */
+    h1{
+      text-shadow: 2px 2px 1px white;
+      
+    }
+    p{
+      font-family: 'Caveat', cursive;
+      text-shadow: 2px 2px 1px white;
+      font-size: 45px;
+    }
     a{
       margin-top: 10px;
       font-size: .761904em;
