--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,11 +1,11 @@
 @import "font-awesome";
 @import url('https://fonts.googleapis.com/css?family=Indie+Flower|Noto+Serif+JP|Sawarabi+Gothic&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Caveat&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Changa&display=swap');
 @import "./header.scss";
-@import "./footer.scss";
 @import "./index.scss";
 @import "./about.scss";
-@import "./skill.scss";
-@import "./contact.scss";
-@import "./btnMenu.scss";
 @import "./works.scss";
-@import "./new.scss";
+@import "./contact.scss";
+@import "./footer.scss";
+@import "./btn_menu.scss";
