--- a/app/assets/stylesheets/_contact.scss
+++ b/app/assets/stylesheets/_contact.scss
@@ -1,10 +1,7 @@
 section.contact {
-  // background: #313840;
   background: linear-gradient(#1c2948ba, #313840);
   padding: 80px 0 150px;
-  // background-image: url(meeting.jpg);
-  // background-size:  cover; 
-  // opacity: 0.8;
+  overflow: scroll;
 }
 
 .stables {
@@ -18,13 +15,10 @@ section.contact {
   margin: 0 auto;
   color: rgb(163, 162, 162);
   vertical-align: baseline;
-  // word-wrap: break-word;
   h1{
-    // flex-wrap: wrap;
     font-size:30px;
     margin-bottom: 10px;
     font-family: 'Sawarabi Gothic', sans-serif;
-    // word-break : break-all;
   }
   p{
     font-family: 'Sawarabi Gothic', sans-serif;
@@ -72,11 +66,7 @@ section.contact {
 }
   .contact input[type=text], .contact textarea {
   display: block;
-  // width: 100%;
   margin-bottom: 10px;
-  // padding: 15px;
-  // outline: none;
-  // border: 1px solid rgba(255, 255, 255, 0.8);
   border-radius: 0;
   color: rgba(255, 255, 255, 0.8);
   }
@@ -90,7 +80,6 @@ section.contact {
   width: 180px;
   margin: 40px auto 0;
   padding: 15px;
-  // border: 1px solid rgba(255, 255, 255, 0.8);
   border-radius: 5px;
   background-color: transparent;
   color: rgba(255, 255, 255, 0.8);
