--- a/app/assets/stylesheets/_index.scss
+++ b/app/assets/stylesheets/_index.scss
@@ -5,7 +5,7 @@ section{
 }
 section.home{
   display: flex;
-  background: image-url('img.jpg') fixed;
+  background: image-url('img.jpg') fixed center center;
   background-size:  cover; 
   text-align:center;
   align-items: center;
@@ -16,10 +16,6 @@ section.home{
   .head{
     color: #3282b8;
     -webkit-text-stroke: .5px #313135;
-    // mask-image: url(mask.png);
-    // -webkit-mask-image: url(mask.png);
-    // mask-size: 120px; 
-    // -webkit-mask-size: 120px; /* 横幅50px、高さはauto */
     h1{
       text-shadow: 2px 2px 1px white;
       
