--- a/app/assets/stylesheets/_index.scss
+++ b/app/assets/stylesheets/_index.scss
@@ -5,7 +5,7 @@ section{
 }
 section.home{
   display: flex;
-  background: image-url('img.jpg') fixed center center;
+  background: image-url('img.jpg') fixed left center;
   background-size:  cover; 
   text-align:center;
   align-items: center;
@@ -42,5 +42,11 @@ section.home{
       padding: 5px 20px 6px;
       line-height: 1em;
     }
+  }
+}
+
+@media only screen and (max-width:412px){
+  section.home{
+    background-size:  150vh; 
   }
 }
