--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -7,12 +7,12 @@
   box-sizing: border-box;
   text-decoration: none;
 }
-.btn_menu.fas.fa-bars{
+.btn_menu.fas{
   display:none;
   position: absolute;
   right: 20px;
 }
-.btn_menu.fas.fa-bars:hover{
+.btn_menu.fas:hover{
   color: #fff;
 }
 
