--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -22,25 +22,25 @@
     .card
       .face.face1
         %figure.contents
-          =image_tag "pictweet.png",height: "150" , alt: "sns サイト"
+          =image_tag "proffy.png",height: "150" , alt: "投稿 フィルター一覧表 サイト"
           %figcaption
-            %h3 pictweet
+            %h3 proffy
       .face.face2
         .contents
-          %p  CRUDを活かした、投稿サイトです。
+          %p  Node.jsとReact(TypeScript)で作れた投稿とフィルターかけの一覧表。
     .card
       .face.face1
         %figure.contents
-          =image_tag "chat_space.png",height: "150", alt: "同期通信　サイト"
+          =image_tag "spotcode.png",height: "150", alt: "同期通信 サイト"
           %figcaption
-            %h3 chat_space
+            %h3 spotcode
       .face.face2
         .contents
-          %p Ajaxを用いた非同期通信チャットアプリケーションで、１対１のチャットはもちろん、複数人でのグループチャットも可能です。また、画像の送信も可能です。
+          %p RailsとReactでスポティファイのコピーサイト。
     .card
       .face.face1
         %figure.contents
-          =image_tag "mercari.png",height: "150", alt: "EC　サイト"
+          =image_tag "mercari.png",height: "150", alt: "ECサイト"
           %figcaption
             %h3 メルカリ(クローンサイト)
       .face.face2
