--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -7,15 +7,14 @@
   .about
     %h1.heading PROFILE
     %p.about-text
-      子どもの頃からモノづくりが好きで、いまはウェブアプリをつくることにハマっています。
-      今までの仕事と比べるのは難しいですが、書いたコードをすぐに結果が反映されるので
-      進んでいく感じがパズルを解いていくような感じがして楽しいですね。
-      逆に進まないときはとてもつらいですが。笑
-    -# %h2.heading SERVICE
-    -# %p.about-text
-    -#   WEB制作において、最初のご相談から納品まで致します,
-    -#   ご利用の流れの第一歩は無料相談からはじまります,
-    -#   新規ホームページ制作、リニューアルをご検討の方も、まずは一度ご相談ください。
+      プログラミングの魅力的な部分は気になる物を他の業界と比べて試しやすい事と
+      フロント、バック、インフラの仕事を幅広く活用出来る場が魅力的でやる気になります。
+
+      新しいことを学ぶのが好きで最初はわからなくとも基礎を繰り返して点と点が繋ぎ始める
+      が面白いです。
+      
+      Railsの良い所は少量のコマンドでスピーディな開発が進めれて大抵なことはGEMがあるから
+      それもプラスになります。
 %section#works.works{"data-index" => "2"}
   %h1.heading WORKS
   .container2
