about me change

--- a/app/assets/stylesheets/_about.scss
+++ b/app/assets/stylesheets/_about.scss
@@ -22,7 +22,7 @@
     width: 80%;
     margin: 30px auto;
     line-height: 2.5;
-    text-align: justify;
+    text-align: center;
     word-wrap: break-word;
   }
 }
