--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -7,13 +7,12 @@
   .about
     %h1.heading PROFILE
     %p.about-text
-      プログラミングの魅力的な部分は気になる物を他の業界と比べて試しやすい事と
-      フロント、バック、インフラの仕事を幅広く活用出来る場が魅力的でやる気になります。
-
-      新しいことを学ぶのが好きで最初はわからなくとも基礎を繰り返して点と点が繋ぎ始める
-      が面白いです。
-      
-      Railsの良い所は少量のコマンドでスピーディな開発が進めれて大抵なことはGEMがあるから
+      プログラミングの魅力的な部分は気になる物を他の業界と比べて試しやすい事と <br>
+      フロント、バック、インフラの仕事を幅広く活用出来る場が魅力的でやる気になります。<br>
+      <br>
+      新しいことを学ぶのが好きで最初はわからなくとも基礎を繰り返して点と点が繋ぎ始めるが面白いです。<br>
+      <br>
+      Railsの良い所は少量のコマンドでスピーディな開発が進めれて大抵なことはGEMがあるから<br>
       それもプラスになります。
 %section#works.works{"data-index" => "2"}
   %h1.heading WORKS
